--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^16.1.5"
+    "react-i18next": "^16.1.5",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
