--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "optimize:images": "node src/scripts/optimize-images.mjs"
   },
   "dependencies": {
     "@types/leaflet": "^1.9.21",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4.1.15",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
